<resources>
    <string name="app_name">Today I Did</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="what">what</string>
    <string name="when">when</string>
    <string name="today_i_did">Today I Did</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="add">Add</string>
    <string name="all_time">All time</string>
    <string name="daily">Daily</string>
    <string name="minutes_0">Minutes: 0</string>
    <string name="_0">0</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="today">Today</string>
    <string name="activity_added_successfully">Activity added successfully</string>
    <string name="select_date">Select date</string>
    <string name="track_your_first_activity_and_watch_your_progress_grow_over_time_every_step_counts">Track your first activity and watch your progress grow over time. Every step counts!</string>
    <string name="add_your_first_activity">Add Your First Activity</string>
    <string name="your_journey_starts_here">Your journey starts here!</string>
    <string name="no_activities_added_for_this_day_yet">No activities added for this day yet.</string>
</resources>