<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_daily">

    <fragment
        android:id="@+id/navigation_daily"
        android:name="dev.bartosz.pretnik.todayidid.ui.daily.DailyFragment"
        android:label="@string/daily"
        tools:layout="@layout/fragment_daily" />

    <fragment
        android:id="@+id/navigation_todayidid"
        android:name="dev.bartosz.pretnik.todayidid.ui.todayidid.TodayIDidFragment"
        android:label="@string/today_i_did"
        tools:layout="@layout/fragment_todayidid" />

    <fragment
        android:id="@+id/navigation_alltime"
        android:name="dev.bartosz.pretnik.todayidid.ui.alltime.AllTimeFragment"
        android:label="@string/all_time"
        tools:layout="@layout/fragment_alltime" />
</navigation>